...
                }
            }
        }
    }
}

const val TAG_HOJA_OPCIONES = "visor_hoja_opciones"

fun tagOpcion(opcion: String): String = "opcion_$opcion"

